# r2d3.142

./: .gitignore
picore/: README.md  core.ini  main.py  setup.cfg
picore/picore/: __init__.py
picore/picore/common/: CmdOptions.py  Config.py  Logger.py  __init__.py
picore/picore/roaming/: __init__.py  move.py  stopper.py
picore/src/: main.py
picore/src/picore/: __init__.py
picore/src/picore/common/: CmdOptions.py  Logger.py  __init__.py
picore/src/picore/roaming/: __init__.py  move.py  stopper.py
picore/src/pir2/: __init__.py
picore/src/pir2/common/: Config.py  IPCPipe.py  Logger.py  __init__.py
picore/src/pir2/display/: DotDisplay.py  OLEDDisplayDriver.py  __init__.py  dot_display.py
picore/src/pir2/roaming/: __init__.py  move.py  stopper.py
picore/test/common/: cmd_options_test.py  config_test.py
picore/test/resources/: logger.ini
picore/tests/common/: cmd_options_test.py  config_test.py
picore/tests/resources/: core.ini
