[metadata]
# replace with your username:
name = picore-subhagho
version = 0.0.1
author = Subho Ghosh
author_email = subho.ghosh@outlook.com
description = Raspberry Pi based robot control library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/subhagho/r2d3.142
project_urls =
    Bug Tracker = https://github.com/subhagho/r2d3.142/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache License
    Operating System :: Raspberry Pi OS

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src